# ocr_translate-plugin_template

./: README.md  cookiecutter.json
{{cookiecutter.plugin_name}}/: README.md  pyproject.toml
{{cookiecutter.plugin_name}}/{{cookiecutter.module_name}}/: __init__.py  plugin.py
